# cpp_labs

./: README.md
custom_vector/: CMakeLists.txt  README.md  main.cpp  nucl_ref.cpp  rna.cpp  rna.h
parser/: CMakeLists.txt  README.md  exceptions.cpp  exceptions.h  factories.cpp  factories.h  main.cpp  parser.cpp  parser.h  workers.cpp  workers.h
parser/testing_files/: Thus_Spake_Zarathustra.txt  grep_test.txt  out.txt  readfile_writefile_dump_test.txt  sort_test.txt  tmp.txt  workflow.txt
